<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.appli.vincent_nesrine.thesimpsons.SavoirActivity"
    android:background="@drawable/cloud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/simpsons_logo"
                android:id="@+id/description_logo"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:layout_below="@id/description_logo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desciption_slogan"
                    android:id="@+id/description_slogan"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rond"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desciption1"
                    android:id="@+id/description_1"
                    android:textColor="@color/black"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_slogan"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/matt"
                    android:id="@+id/description_matt"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_1"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desciption2"
                    android:id="@+id/description_2"
                    android:textColor="@color/black"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_matt"
                    android:layout_marginTop="20dp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/famille"
                    android:id="@+id/description_famille"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_2"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desciption3"
                    android:id="@+id/description_3"
                    android:textColor="@color/black"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_famille"
                    android:layout_marginTop="20dp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/film"
                    android:id="@+id/description_film"
                    android:layout_marginLeft="7dp"
                    android:layout_below="@id/description_3"
                    android:background="@drawable/rond"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
